<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlanco">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fragment_detalle_receta_imagen"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@mipmap/tarta_de_chocolate_sin_harina" />

            <TextView
                android:id="@+id/fragment_detalle_receta_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20sp"
                tools:text="@string/receta_titulo"
                android:textColor="@color/colorNegro"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20sp"
                android:text="@string/receta_tipo"
                android:textColor="@color/Gris"
                android:textSize="16sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                card_view:cardBackgroundColor="@color/gris"
                card_view:cardCornerRadius="15dp"
                card_view:cardElevation="0dp"

                card_view:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="120dp"
                        android:layout_marginTop="20dp"
                        card_view:layout_constraintStart_toEndOf="@+id/imageView6"
                        card_view:layout_constraintTop_toTopOf="parent"
                        card_view:srcCompat="@drawable/ic_access_time_black_24dp"
                        tools:ignore="VectorDrawableCompat" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent"
                        card_view:srcCompat="@drawable/ic_restaurant_menu_black_24dp"
                        tools:ignore="VectorDrawableCompat" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toBottomOf="@+id/imageView6"
                        card_view:srcCompat="@drawable/ic_date_range_black_24dp"
                        tools:ignore="VectorDrawableCompat" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginStart="120dp"
                        android:layout_marginTop="20dp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toEndOf="@+id/imageView7"
                        card_view:layout_constraintTop_toBottomOf="@+id/imageView5"
                        card_view:srcCompat="@drawable/ic_public_black_24dp"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:text="Entre 30 min y 1 hora"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintHorizontal_bias="0.0"
                        card_view:layout_constraintStart_toEndOf="@+id/imageView5"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:text="Facil"
                        card_view:layout_constraintStart_toEndOf="@+id/imageView6"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="30dp"
                        android:text="Verano"
                        card_view:layout_constraintEnd_toStartOf="@+id/imageView8"
                        card_view:layout_constraintHorizontal_bias="0.0"
                        card_view:layout_constraintStart_toEndOf="@+id/imageView7"
                        card_view:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="30dp"
                        android:text="Argentina"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintHorizontal_bias="0.0"
                        card_view:layout_constraintStart_toEndOf="@+id/imageView8"
                        card_view:layout_constraintTop_toBottomOf="@+id/textView5" />
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20sp"
                android:text="@string/ingredientes"
                android:textColor="@color/colorNegro"
                android:textSize="20dp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                card_view:cardBackgroundColor="@color/gris"
                card_view:cardCornerRadius="15dp"
                card_view:cardElevation="0dp">

                <TextView
                    android:id="@+id/fragment_detalle_receta_ingredientes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    tools:text="@string/receta_ingredientes" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20sp"
                android:text="@string/receta"
                android:textColor="@color/colorNegro"
                android:textSize="20dp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/card4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                card_view:cardBackgroundColor="@color/gris"
                card_view:cardCornerRadius="15dp"
                card_view:cardElevation="0dp">

                <TextView
                    android:id="@+id/fragment_detalle_receta_receta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    tools:text="@string/receta_receta" />
            </android.support.v7.widget.CardView>



        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>